# andromeda-os

./: :w  Cargo.toml  README.md  rust-project.json  rustfmt.toml
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga.rs
src/allocator/: bump.rs  linkedlist.rs  mod.rs  pool.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
