[package]
name = "andromeda-os"
authors = ["Laura Powles <nebulaeandstars@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.9.2"
x86_64 = "0.14.6"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
uart_16550 = "0.2.15"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# give QEMU an "out" so that it can exit after tests
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 60 # (seconds)

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
